GC Dental/src/objects/Primary_Order_Goals_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>Primary Order Goals Line Items</relationshipLabel>
        <relationshipName>Primary_Order_Goals_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issued_Date__c</fullName>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Order_Goals_for_manager__c</fullName>
        <label>Primary Order Goal</label>
        <referenceTo>Primary_Order_Goals_for_manager__c</referenceTo>
        <relationshipLabel>Primary Order Goals Line Items</relationshipLabel>
        <relationshipName>Primary_Order_Goals_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue_Generated__c</fullName>
        <label>Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Revenue__c</fullName>
        <label>Target Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <label>UniqueName</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Primary Order Goals Line Item</label>
    <nameField>
        <label>Primary Order Goals Line Items No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Primary Order Goals Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>